# stock_trade_old

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  check_setup.py  pyproject.toml  setup.py  stocklist.good.csv  test_tickflow.py
.github/workflows/: check_setup.yml  daily-stock-trade.yml  lint.yml
config/: gemini_review.yaml  qwen_review.yaml  qwen_review_test.yaml  rules_preselect.yaml  selector.config.json  vision_review.yaml
docs/: quant-vision-review.md
src/stock_trade_z/: add_xueqiu_urls.py  detect_risk.py  fetch_kline.py  fetch_pool_kline.py  fetch_stocklist_300_500.py  fetch_trend_pools.py  pool_selector.config.json  risk.config.json  select_pool.py  select_stock.py  selector.config.json  sort_csv.py  stocklist.total.csv  try_play.py  update_to_goodlist.py
src/stock_trade_z/lib/: bao_stock_client.py  compare.py  compute.py  constant.py  fetch_data.py  fetch_data.tf.py  fetch_data.ts.py  fetch_data.zh.py  fetch_trend.py  lark_notify.py  lark_report.py  llm.py  load_data.py  load_pool_selector.py  load_stocklist.py  paths.py  registry.py  risk_selectors.py  send_lark_message.py  trend_context.py  utils.py  zhitu_api.py
stock_trade_z/: __init__.py  check_code.py  check_code_bs.py  detect_risk.py  fetch_stocklist.py  is_trade_date.py  quant_pipeline.py  select_pool.py  select_stock.py  stocklist.total.csv
stock_trade_z/lib/: __init__.py  bao_stock_client.py  chart_score.py  data_utils.py  fetch_data.py  fetch_data.tf.py  fetch_data.ts.py  fetch_trend.py  lark_doc.py  lark_report.py  llm_analyze.py  llm_context.py  load_pool_selector.py  load_risk.py  load_selector.py  logger.py  parallel_utils.py  paths.py  pipeline_selectors.py  pool_selectors.py  quant_selectors.py  rate_limit.py  registry.py  selector.py  send_lark_message.py  time.py  trend_context.py  ts_pro_api.py
stock_trade_z/quant/: __init__.py  report.py
stock_trade_z/quant/charts/: export_kline_charts.py
stock_trade_z/quant/charts/components/: charts.py
stock_trade_z/quant/preselect/: cli.py  pipeline_core.py  pipeline_io.py  preselect.py  schemas.py  selector_engine.py
stock_trade_z/quant/review/: base_reviewer.py  gemini_review.py  prompt.md  qwen_review.py  vision_review.py
